--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -233,7 +233,7 @@
 
     <!-- Accused (Driver) Dropdown -->
     <div class="form-group">
-      <label for="accusedSelect">Accuser (Driver) <span style="color: red;">*</span></label>
+      <label for="accusedSelect">Accused (Driver) <span style="color: red;">*</span></label>
       <select id="accusedSelect">
         <option value="" disabled selected>Select a driver…</option>
       </select>
@@ -319,7 +319,7 @@
       </select>
     </div>
 
-    <!-- Submit Button --> 
+    <!-- Submit Button -->
     <button id="submitBtn">Submit Ticket</button>
     <div class="status" id="statusMsg"></div>
 
@@ -408,50 +408,50 @@
     const auth  = getAuth(app);
 
     // 4) Cache DOM elements
-    const submitSection        = document.getElementById("submitSection");
-    const viewSection          = document.getElementById("viewSection");
-    const loginSection         = document.getElementById("loginSection");
-    const adminSection         = document.getElementById("adminSection");
+    const submitSection         = document.getElementById("submitSection");
+    const viewSection           = document.getElementById("viewSection");
+    const loginSection          = document.getElementById("loginSection");
+    const adminSection          = document.getElementById("adminSection");
 
     // Submit‐ticket elements
-    const accusedSelect        = document.getElementById("accusedSelect");
-    const newDriverContainer   = document.getElementById("newDriverContainer");
-    const newDriverInput       = document.getElementById("newDriverInput");
+    const accusedSelect         = document.getElementById("accusedSelect");
+    const newDriverContainer    = document.getElementById("newDriverContainer");
+    const newDriverInput        = document.getElementById("newDriverInput");
 
-    const competitionSelect        = document.getElementById("competitionSelect");
+    const competitionSelect         = document.getElementById("competitionSelect");
     const newCompetitionContainer   = document.getElementById("newCompetitionContainer");
     const newCompetitionInput       = document.getElementById("newCompetitionInput");
 
-    const fullIncident         = document.getElementById("fullIncident");
-    const eventSelect          = document.getElementById("eventSelect");
-    const proofUrlInput        = document.getElementById("proofUrl");
-    const reporterInput        = document.getElementById("reporter");
-    const seasonSelect         = document.getElementById("seasonSelect");
+    const fullIncident          = document.getElementById("fullIncident");
+    const eventSelect           = document.getElementById("eventSelect");
+    const proofUrlInput         = document.getElementById("proofUrl");
+    const reporterInput         = document.getElementById("reporter");
+    const seasonSelect          = document.getElementById("seasonSelect");
 
-    const trackSelect          = document.getElementById("trackSelect");
-    const newTrackContainer    = document.getElementById("newTrackContainer");
-    const newTrackInput        = document.getElementById("newTrackInput");
+    const trackSelect           = document.getElementById("trackSelect");
+    const newTrackContainer     = document.getElementById("newTrackContainer");
+    const newTrackInput         = document.getElementById("newTrackInput");
 
-    const ruleBreachSelect     = document.getElementById("ruleBreachSelect");
+    const ruleBreachSelect      = document.getElementById("ruleBreachSelect");
 
-    const submitBtn            = document.getElementById("submitBtn");
-    const statusMsg            = document.getElementById("statusMsg");
+    const submitBtn             = document.getElementById("submitBtn");
+    const statusMsg             = document.getElementById("statusMsg");
 
     // View all tickets (public) elements
-    const viewTicketsBtn       = document.getElementById("viewTicketsBtn");
-    const backFromViewBtn      = document.getElementById("backFromViewBtn");
-    const ticketsListContainer = document.getElementById("ticketsListContainer");
+    const viewTicketsBtn        = document.getElementById("viewTicketsBtn");
+    const backFromViewBtn       = document.getElementById("backFromViewBtn");
+    const ticketsListContainer  = document.getElementById("ticketsListContainer");
 
     // Login (admin) elements
-    const loginToggleBtn       = document.getElementById("loginToggleBtn");
-    const loginBtn             = document.getElementById("loginBtn");
-    const backFromLoginBtn     = document.getElementById("backFromLoginBtn");
-    const emailInput           = document.getElementById("email");
-    const passwordInput        = document.getElementById("password");
-    const loginStatusMsg       = document.getElementById("loginStatusMsg");
+    const loginToggleBtn        = document.getElementById("loginToggleBtn");
+    const loginBtn              = document.getElementById("loginBtn");
+    const backFromLoginBtn      = document.getElementById("backFromLoginBtn");
+    const emailInput            = document.getElementById("email");
+    const passwordInput         = document.getElementById("password");
+    const loginStatusMsg        = document.getElementById("loginStatusMsg");
 
     // Admin dashboard elements
-    const logoutBtn            = document.getElementById("logoutBtn");
+    const logoutBtn             = document.getElementById("logoutBtn");
     const adminTicketsContainer = document.getElementById("adminTicketsContainer");
 
     // ----------------------------------------------------------------
@@ -612,22 +612,22 @@
       statusMsg.className = "status";
 
       // 1) Read and trim values
-      let accused     = accusedSelect.value;
-      const newDriverName = newDriverInput.value.trim();
+      let accused       = accusedSelect.value;
+      const newDriverName       = newDriverInput.value.trim();
 
-      let competition = competitionSelect.value;
-      const newCompetitionName = newCompetitionInput.value.trim();
+      let competition   = competitionSelect.value;
+      const newCompetitionName  = newCompetitionInput.value.trim();
 
-      const summary    = fullIncident.value.trim();
-      const eventVal   = eventSelect.value;
-      const proofUrl   = proofUrlInput.value.trim();
-      const reporter   = reporterInput.value.trim();
-      const season     = seasonSelect.value;
+      const summary     = fullIncident.value.trim();
+      const eventVal    = eventSelect.value;
+      const proofUrl    = proofUrlInput.value.trim();
+      const reporter    = reporterInput.value.trim();
+      const season      = seasonSelect.value;
 
-      let track       = trackSelect.value;
-      const newTrackName = newTrackInput.value.trim();
+      let track         = trackSelect.value;
+      const newTrackName       = newTrackInput.value.trim();
 
-      const ruleBreach = ruleBreachSelect.value;
+      const ruleBreach  = ruleBreachSelect.value;
 
       // 2) Required fields: accused, competition, summary, reporter
       if (
@@ -695,25 +695,25 @@
         statusMsg.className = "status success";
 
         // Clear fields
-        accusedSelect.value       = "";
+        accusedSelect.value            = "";
         newDriverContainer.classList.add("hidden");
-        newDriverInput.value      = "";
+        newDriverInput.value           = "";
 
-        competitionSelect.value     = "";
+        competitionSelect.value        = "";
         newCompetitionContainer.classList.add("hidden");
-        newCompetitionInput.value   = "";
+        newCompetitionInput.value      = "";
 
-        fullIncident.value         = "";
-        eventSelect.value          = "Practice";
-        proofUrlInput.value        = "";
-        reporterInput.value        = "";
-        seasonSelect.value         = "Season 1";
+        fullIncident.value       = "";
+        eventSelect.value        = "Practice";
+        proofUrlInput.value      = "";
+        reporterInput.value      = "";
+        seasonSelect.value       = "Season 1";
 
-        trackSelect.value          = "";
+        trackSelect.value        = "";
         newTrackContainer.classList.add("hidden");
-        newTrackInput.value        = "";
+        newTrackInput.value       = "";
 
-        ruleBreachSelect.value     = "";
+        ruleBreachSelect.value   = "";
 
       } catch (error) {
         console.error("Error writing ticket: ", error);
@@ -782,9 +782,9 @@
         try {
           const appealsColRef = collection(db, "tickets", ticketId, "appeals");
           await addDoc(appealsColRef, {
-            appealInfo:   appealInfoValue,
+            appealInfo:    appealInfoValue,
             extraProofUrl: extraProofValue,
-            timestamp:    serverTimestamp()
+            timestamp:     serverTimestamp()
           });
           appealStatusDiv.textContent = "Appeal submitted! We’ll review it soon.";
           appealStatusDiv.className = "status success";
@@ -1178,7 +1178,7 @@
       if (imgData) {
         const pageWidth = doc.internal.pageSize.getWidth();
         const imgWidthMM = 60;
-        const imgProps = doc.getImageProperties(imgData);
+        const imgProps = doc.getImageProperties(imgData); 
         const imgHeightMM = (imgProps.height * imgWidthMM) / imgProps.width;
         const x = (pageWidth - imgWidthMM) / 2;
         doc.addImage(imgData, "PNG", x, y, imgWidthMM, imgHeightMM);
@@ -1232,3 +1232,4 @@
   </script>
 </body>
 </html>
+
