--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>IFWL Tickets • Admin Detailed View with PDF Export</title>
+  <title>IFWL Tickets • Sorted Dropdowns</title>
   <style>
     /* ------------------------------------------------------------
        Base styling for the entire page
@@ -465,11 +465,12 @@
     }
 
     // ----------------------------------------------------------------
-    // Populate “Accused” dropdown from /drivers
+    // Populate “Accused” dropdown from /drivers, sorted by fullName
     // ----------------------------------------------------------------
     async function populateDriverDropdown() {
-      const driversCol = collection(db, "drivers");
-      const snapshot   = await getDocs(driversCol);
+      // 🔹 Use orderBy("fullName", "asc") to sort ascending
+      const driversQuery = query(collection(db, "drivers"), orderBy("fullName", "asc"));
+      const snapshot   = await getDocs(driversQuery);
 
       accusedSelect.innerHTML = "";
       const placeholder = document.createElement("option");
@@ -503,11 +504,11 @@
     }
 
     // ----------------------------------------------------------------
-    // Populate “Competition” dropdown from /competitions
+    // Populate “Competition” dropdown from /competitions, sorted by name
     // ----------------------------------------------------------------
     async function populateCompetitionDropdown() {
-      const compCol = collection(db, "competitions");
-      const snapshot = await getDocs(compCol);
+      const compQuery = query(collection(db, "competitions"), orderBy("name", "asc"));
+      const snapshot  = await getDocs(compQuery);
 
       competitionSelect.innerHTML = "";
       const placeholder = document.createElement("option");
@@ -541,11 +542,11 @@
     }
 
     // ----------------------------------------------------------------
-    // Populate “Track” dropdown from /tracks
+    // Populate “Track” dropdown from /tracks, sorted by name
     // ----------------------------------------------------------------
     async function populateTrackDropdown() {
-      const tracksCol = collection(db, "tracks");
-      const snapshot = await getDocs(tracksCol);
+      const trackQuery = query(collection(db, "tracks"), orderBy("name", "asc"));
+      const snapshot   = await getDocs(trackQuery);
 
       trackSelect.innerHTML = "";
       const placeholder = document.createElement("option");
@@ -579,11 +580,11 @@
     }
 
     // ----------------------------------------------------------------
-    // Populate “Rule Breach” dropdown from /regulations
+    // Populate “Rule Breach” dropdown from /regulations, sorted by name
     // ----------------------------------------------------------------
     async function populateRegulationsDropdown() {
-      const regsCol = collection(db, "regulations");
-      const snapshot = await getDocs(regsCol);
+      const regQuery  = query(collection(db, "regulations"), orderBy("name", "asc"));
+      const snapshot  = await getDocs(regQuery);
 
       ruleBreachSelect.innerHTML = "";
       const placeholder = document.createElement("option");
@@ -1178,7 +1179,7 @@
       if (imgData) {
         const pageWidth = doc.internal.pageSize.getWidth();
         const imgWidthMM = 60;
-        const imgProps = doc.getImageProperties(imgData); 
+        const imgProps = doc.getImageProperties(imgData);
         const imgHeightMM = (imgProps.height * imgWidthMM) / imgProps.width;
         const x = (pageWidth - imgWidthMM) / 2;
         doc.addImage(imgData, "PNG", x, y, imgWidthMM, imgHeightMM);
@@ -1232,4 +1233,3 @@
   </script>
 </body>
 </html>
-
